# mozautodbg

./: .gitignore  README.md  pyproject.toml
mozautodbg/: build_hook.py  cli.py  config.py
